--- a/20200729/debian-10/docker-compose.yml
+++ b/20200729/debian-10/docker-compose.yml
@@ -2,6 +2,7 @@ version: '2'
 services:
   dokuwiki:
     image: 'docker.io/bitnami/dokuwiki:20200729-debian-10'
+    user: root
     ports:
       - '80:8080'
       - '443:8443'
